syntax = "proto3";
package sunrise.shareclass.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/sunriselayer/sunrise/x/shareclass/types";

// ValidatorBond
message ValidatorBond {
  string validator_address = 1 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

// Unbonding
message Unbonding {
  uint64 id = 1;
  string recipient_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string delegator_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_address = 4 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  google.protobuf.Timestamp completion_time = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true
  ];
  cosmos.base.v1beta1.Coin amount = 6 [(gogoproto.nullable) = false];
}
